Finished seats API request implementation